--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
     <groupId>telegram-bot-api</groupId>
     <artifactId>telegram-bot-api</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
+        <finalName>teleflow</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
